fixed cors things, ports and sql